--- a/projects/google-keep-clone/archiveNotes.html
+++ b/projects/google-keep-clone/archiveNotes.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archive Notes</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Google Keep Clone</title>
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="shortcut icon" href="google-keep.png" type="image/x-icon">  
+    <style>
+        #archNotes{
+            margin-left: 400px;
+        }
+    </style>
 </head>
 <body>
-    <!-- New notes block -->
-    <div id="archive-notes">
-        
+    <div class="container">
+        <div class="operations">
+            <button class="del-btn" onclick="window.location.href = 'index.html'">Home</button>
+            <button class="del-btn" onclick="window.location.href = 'deletedNotes.html'">Deleted Notes</button>
+            <button class="arch-btn" onclick="window.location.href = 'archiveNotes.html'">Archive Notes</button>
+        </div>
+        <div id="archDiv">
+            <h3>Archive Notes Section</h3>
+            <div id="archNotes">
+    
+            </div>
+        </div>
     </div>
-    <script src="index.js"></script>
+    <script src="archiveNotes.js">
+    </script>
 </body>
 </html>
