--- a/projects/google-keep-clone/deletedNotes.html
+++ b/projects/google-keep-clone/deletedNotes.html
@@ -18,7 +18,7 @@
         <div class="operations">
             <button class="del-btn" onclick="window.location.href = 'index.html'">Home</button>
             <button class="del-btn" onclick="window.location.href = 'deletedNotes.html'">Deleted Notes</button>
-            <button class="arch-btn" onclick="window.location.href = 'archiveNotes.html'">Archive Notes</button>
+            <button class="del-btn" onclick="window.location.href = 'archiveNotes.html'">Archive Notes</button>
         </div>
         <div id="delDiv">
             <h3>Deleted Notes Section</h3>
